src/App.css
.App {
  text-align: center;
  /* background-color: '#84A98C'; */
  width: 100%;
  height: 100vh !important;
}

.App-header {
  /* background-color: #282c34; */
  min-height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

/* importing google fonts SYNE and UNICA */
@import url('https://fonts.googleapis.com/css2?family=Syne&family=Unica+One&display=swap');

body {
  font-family: 'Syne', sans-serif;
  overflow-x: hidden;
  background-color: transparent !important;
}

html {
  overflow-x: hidden;
  margin: 0;
  padding: 0;
}

